unpackaged/main/default/objects/Egnyte_Settings__mdt/Egnyte_Settings__mdt.object-meta.xml
<CustomObject>
    <description>OAuth and API settings for the custom Egnyte iframe integration.</description>
    <label>Egnyte Settings</label>
    <pluralLabel>Egnyte Settings</pluralLabel>
</CustomObject>