unpackaged/main/default/objects/Egnyte_Settings__mdt/fields/Access_Token__c.field-meta.xml
<CustomField>
    <fullName>Access_Token__c</fullName>
    <description>Current Egnyte OAuth access token. Optional if Refresh Token credentials are configured.</description>
    <label>Access Token</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>