unpackaged/main/default/objects/Egnyte_Settings__mdt/fields/Client_Id__c.field-meta.xml
<CustomField>
    <fullName>Client_Id__c</fullName>
    <description>Egnyte API key (OAuth client_id).</description>
    <label>Client Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>