unpackaged/main/default/objects/Egnyte_Settings__mdt/fields/Client_Secret__c.field-meta.xml
<CustomField>
    <fullName>Client_Secret__c</fullName>
    <description>Egnyte OAuth client secret.</description>
    <label>Client Secret</label>
    <length>255</length>
    <type>Text</type>
</CustomField>