unpackaged/main/default/objects/Egnyte_Settings__mdt/fields/Default_Folder_Path__c.field-meta.xml
<CustomField>
    <fullName>Default_Folder_Path__c</fullName>
    <description>Fallback Egnyte folder path when no Salesforce record mapping exists.</description>
    <label>Default Folder Path</label>
    <length>255</length>
    <type>Text</type>
</CustomField>