unpackaged/main/default/objects/Egnyte_Settings__mdt/fields/Domain__c.field-meta.xml
<CustomField>
    <fullName>Domain__c</fullName>
    <description>Egnyte domain host, for example launchpad.egnyte.com.</description>
    <label>Domain</label>
    <length>255</length>
    <type>Text</type>
</CustomField>