unpackaged/main/default/objects/Egnyte_Settings__mdt/fields/Refresh_Token__c.field-meta.xml
<CustomField>
    <fullName>Refresh_Token__c</fullName>
    <description>Egnyte OAuth refresh token used to obtain a new access token when the current token expires.</description>
    <label>Refresh Token</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>